started creating site for class

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -18,3 +18,9 @@ cornelius_fiddlebone:
   twitter: rhymeswithsackit
   google:
     plus: CorneliusFiddlebone
+
+
+jon_weisz_columbia:
+  name: Jonathan Weisz
+  web: http://www.cs.columbia.edu:~/jweisz
+  avatar: columbia-seal.jpg
