--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title:            Site Title
+title:            Jon Weisz
 locale:           en_US
 url:              
 
@@ -26,9 +26,9 @@ kramdown:
 
 # Site owner
 owner:
-  name: Your Name
-  avatar: bio-photo.jpg
-  bio: "Describe your self."
+  name: Jonathan Weisz
+  avatar: jweisz.jpg
+  bio: "PhD Candidate at Columbia University. Robotics Enthusiast. Beer snob."
   email: 
   disqus-shortname: 
   twitter: #username
@@ -56,3 +56,11 @@ owner:
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md"]
+
+defaults: 
+  -
+    scope:
+      path: "teaching"
+    values:
+      layout: teaching_page
+      author: jon_weisz_columbia
