Added email and github author info

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -24,3 +24,5 @@ jon_weisz_columbia:
   name: Jonathan Weisz
   web: http://www.cs.columbia.edu:~/jweisz
   avatar: columbia-seal.jpg
+  email: jonweisz+blog@gmail.com
+  
