--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ owner:
   name: Jonathan Weisz
   avatar: jweisz.jpg
   bio: "PhD Candidate at Columbia University. Robotics Enthusiast. Beer snob."
-  email: 
+  email: jonweisz+blog@gmail.com
   disqus-shortname: 
   twitter: #username
   facebook: #username
@@ -40,7 +40,7 @@ owner:
     ad-client: 
     ad-slot: 
   bing-verify: 
-  github: #username
+  github: jon-weisz
   stackoverflow: #http://stackoverflow.com/users/123456/username
   linkedin: #username
   instagram: #username
